<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:paddingStart="24dp"
    android:paddingTop="8dp"
    android:paddingEnd="24dp"
    android:paddingBottom="8dp">

    <TextView
        android:id="@+id/dialog_shipped_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/brandon_medium"
        android:text="@string/update_order"
        android:textColor="@android:color/black"
        android:textSize="32sp" />

    <TextView
        android:id="@+id/dialog_shipped_title_small"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/dialog_shipped_title"
        android:fontFamily="@font/brandon_medium"
        android:text="@string/update_order_status"
        android:textColor="@android:color/darker_gray"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/txt_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/dialog_shipped_title_small"
        android:fontFamily="@font/brandon_medium"
        android:text="Status: Placed"
        android:textColor="@android:color/darker_gray"
        android:textSize="22sp" />

    <RadioGroup
        android:id="@+id/dialog_shipped_rdi_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_status"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/rdi_shipped"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:fontFamily="@font/brandon_medium"
            android:text="@string/shipped"
            android:textSize="22sp" />

        <RadioButton
            android:id="@+id/rdi_cancelled"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/brandon_medium"
            android:text="@string/cancelled"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="22sp" />
    </RadioGroup>

    <LinearLayout
        android:id="@+id/dialog_shipped_layout_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/dialog_shipped_rdi_group"
        android:gravity="end"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:paddingBottom="8dp"
            android:text="@string/cancel"
            android:textColor="@android:color/darker_gray" />

        <Button
            android:id="@+id/btn_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:paddingBottom="8dp"
            android:text="@string/ok"
            android:textColor="@android:color/holo_red_dark" />

    </LinearLayout>

</RelativeLayout>