<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:padding="8dp">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/update_food_food_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/food_name" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/update_food_food_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/food_price" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/update_food_food_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/food_description" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/update_food_food_image"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:scaleType="fitXY"
        />
</LinearLayout>